# Ops-Agent

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  DEVELOPMENT_PLAN.md  README.md  REASONIX.md  pyproject.toml  setup.py  start.bat  start.ps1  start.sh  test_neo4j_connection.py  学习笔记.md  辩论重构开发计划.md
.claude/: settings.local.json
.cursor/rules/: prometheus-integration-plan.mdc  todo-features.mdc
.cursor/skills-cursor/: .openskills.json
chroma_data/: chroma.sqlite3
data/shared_board/: code_output.json  debate_result_INC-13014b4cfc3c.json  graph_rag_context.json  ops_output.json  pipeline_result_INC-07fe2ffb553e.json  pipeline_result_INC-213ecdf8d52d.json  pipeline_result_INC-4203951d8a0a.json  pipeline_result_INC-4c87d57ce62d.json  pipeline_result_INC-5515adacb1d8.json  pipeline_result_INC-58cb7aedba6f.json  pipeline_result_INC-5e307d48f583.json  pipeline_result_INC-643e1c031cd3.json  pipeline_result_INC-7506ab7c0f48.json  pipeline_result_INC-8cab8664fc28.json  pipeline_result_INC-924feb67e8e9.json  pipeline_result_INC-978cd15fdc09.json  pipeline_result_INC-994ee1cd9165.json  pipeline_result_INC-DEMO.json  pipeline_result_INC-a66ceae5a5dc.json  pipeline_result_INC-f37068bd6624.json  report_output.json  sre_output.json  visualization_data.json
src/power_aiops/: __init__.py  __main__.py  cli.py  config.py  run_incident.py
src/power_aiops/api/: app.py  (+3 more)
tests/: test_agents.py  test_api.py  test_cli.py  test_integrations.py  test_llm.py  test_message_log.py  test_messages.py  test_pipeline.py  test_prompts.py  test_smoke.py
tests/fixtures/: sample_incident.json
(+73 files in other folders)
